Fixed task message color in dark mode

--- a/frontend/static/css/general.css
+++ b/frontend/static/css/general.css
@@ -166,6 +166,7 @@ nav a:hover {
 
 #task-queue {
 	padding: 1rem;
+	color: var(--text-color);
 	font-size: .8rem;
 }
 
